--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,45 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-        {% block stylesheets %}{% endblock %}
-    </head>
-    <body>
-        <div class="container-fluid">
-            <div class="row justify-content-center">
-                <div class="col text-center col-md-1">
-                    <a href="{{ path('home') }}">Home</a>
-                </div>
-                <div class="col text-center col-md-1">
-                    <a href="{{ path('rooms') }}">Rooms</a>
-                </div>
-                <div class="col text-center col-md-1">
-                    About
-                </div>
-                <div class="col text-center col-md-1">
-                    Contact
-                </div>
-            </div>
-            <div class="row">
-                <div class="col" style="background-color: #5a5a5a; height: 335px;">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    {% block stylesheets %}{% endblock %}
+</head>
+<body>
+<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
+    <a class="navbar-brand" href="#">Villa at the Bay</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item{% if selectedNav == 'home' %} active{% endif %}">
+                <a href="{{ path('home') }}" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item{% if selectedNav == 'rooms' %} active{% endif %}">
+                <a href="{{ path('rooms') }}" class="nav-link">Rooms</a>
+            </li>
+            <li class="nav-item{% if selectedNav == 'about' %} active{% endif %}">
+                <a href="{{ path('about') }}" class="nav-link">About</a>
+            </li>
+            <li class="nav-item{% if selectedNav == 'contact' %} active{% endif %}">
+                <a href="{{ path('contact') }}" class="nav-link">Contact</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 
-                </div>
-            </div>
+<div class="container-fluid">
+
+    <div class="row">
+        <div class="col" style="background-color: #5a5a5a; height: 335px;">
+
         </div>
+    </div>
+</div>
 
-        {% block body %}{% endblock %}
+{% block body %}{% endblock %}
 
-        <div class="container">
-            <div class="row">
-                <div class="col text-center">
-                    &copy; <?= date('Y') ?> by THE VILLA AT THE BAY.
-                </div>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <p class="text-secondary">
+            &copy; <?= date('Y') ?> by THE VILLA AT THE BAY.
+            </p>
         </div>
-        {% block javascripts %}{% endblock %}
-    </body>
+    </div>
+</div>
+{% block javascripts %}{% endblock %}
+</body>
 </html>
