--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -3,7 +3,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Your lucky number is {{ number }}</h1>
+                <h1>Contact the Villa</h1>
+                <p>Should you have any questions please don't hesitate to contact us.</p>
             </div>
         </div>
     </div>
