Added asterisk to form

--- a/templates/pages/rooms.html.twig
+++ b/templates/pages/rooms.html.twig
@@ -15,3 +15,11 @@
     </div>
 
 {% endblock %}
+
+{% block stylesheets %}
+<style type="text/css">
+    label.required:after {
+        content: '*';
+    }
+</style>
+{% endblock %}
