Updated content for About page

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -3,9 +3,38 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Your lucky number is {{ number }}</h1>
+                <h1 class="display-1">About the Villa at The Bay</h1>
+
+                <p class="lead">Situated in Deception Bay in the Queensland region, The Villa at The Bay is a villa featuring a patio
+                    and garden views.</p>
+                <p>The accommodation is 33 km from Brisbane, and guests benefit from complimentary
+                    WiFi and private parking available on site.</p>
+                <p>The villa is equipped with 1 separate bedroom and includes a kitchen with an oven and a dining area. The villa also offers a flat-screen TV, a seating area, and a bathroom with a shower.</p>
+                <p>Margate is 13 km from The Villa at the Bay, while Caloundra is 43 km from the property. Brisbane Airport is 26 km away.</p>
+
+                <img src="https://s3-ap-southeast-2.amazonaws.com/villadbay/images/villa--inside--kitchen.png" class="rounded img-thumbnail mx-auto d-block"/>
             </div>
         </div>
+
+
+        <div class="row">
+            <div class="col-12">
+                <h2 class="display-2">Villa Amenities</h2>
+                <ul class="list-group-flush ">
+                    <li class="list-group-item">Free resident car parking</li>
+                    <li class="list-group-item">Fully Self contained</li>
+                    <li class="list-group-item">Free WI-FI access</li>
+                    <li class="list-group-item">24 hour check-in available</li>
+                    <li class="list-group-item">Business services</li>
+                    <li class="list-group-item">Flat screen TV</li>
+                    <li class="list-group-item">Laundry facilities</li>
+                    <li class="list-group-item">DVD player</li>
+                    <li class="list-group-item">Tea &amp; coffee making facilities</li>
+                    <li class="list-group-item">Iron & ironing board</li>
+                </ul>
+            </div>
+        </div>
+
     </div>
 
 {% endblock %}
