--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -35,7 +35,8 @@
     </div>
 </nav>
 
-<div class="container-fluid">
+{% if disablePanoramicView is not defined %}
+    <div class="container-fluid">
 
     <div class="row">
         <div class="col" style="background-color: #5a5a5a; height: 335px;">
@@ -43,6 +44,7 @@
         </div>
     </div>
 </div>
+{% endif %}
 
 {% block body %}{% endblock %}
 
