--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -12,7 +12,7 @@
                 <p>The villa is equipped with 1 separate bedroom and includes a kitchen with an oven and a dining area. The villa also offers a flat-screen TV, a seating area, and a bathroom with a shower.</p>
                 <p>Margate is 13 km from The Villa at the Bay, while Caloundra is 43 km from the property. Brisbane Airport is 26 km away.</p>
 
-                <img src="https://s3-ap-southeast-2.amazonaws.com/villadbay/images/villa--inside--kitchen.png" class="rounded img-thumbnail mx-auto d-block"/>
+                <img src="https://d3orc742w48r4f.cloudfront.net/images/villa--inside--kitchen.png" class="rounded img-thumbnail mx-auto d-block"/>
             </div>
         </div>
 
