--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -4,8 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Contact the Villa</h1>
-                <p>Should you have any questions please don't hesitate to contact us.</p>
+                <h1 class="display-1">Contact the Villa</h1>
+                <p class="lead">Should you have any questions please don't hesitate to contact us.</p>
 
                 {{ form_start(form) }}
                 {{ form_widget(form) }}
