--- a/templates/pages/rooms.html.twig
+++ b/templates/pages/rooms.html.twig
@@ -4,9 +4,8 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Our Rooms</h1>
-                <p>With it's spacious feel and luxurious Queen bed, our Executive room is perfect if you like to stretch out and relax.
-                    There is a comfortable seating area, along with luxurious bedding that will guarantee you a great night’s sleep.</p>
+                <h1 class="display-1">Our Rooms</h1>
+                <p class="lead">With it's spacious feel and luxurious Queen bed, our Executive room is perfect if you like to stretch out and relax. There is a comfortable seating area, along with luxurious bedding that will guarantee you a great night’s sleep.</p>
                 {{ form_start(form) }}
                 {{ form_widget(form) }}
                 {{ form_end(form) }}
