--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -15,14 +15,29 @@
 {% block stylesheets %}
 <style type="text/css">
     body {
-        background: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine-65900.jpeg') no-repeat center center fixed;
+        background: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine-sm.jpg') no-repeat center 75% fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         background-size: cover;
         -o-background-size: cover;
     }
-    label.required:after {
-        content: '*';
+
+    @media (min-width: 768px) {
+        body {
+            background-image: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine-md.jpg');
+        }
+    }
+
+    @media (min-width: 992px) {
+        body {
+            background-image: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine-lg.jpg');
+        }
+    }
+
+    @media (min-width: 1200px) {
+        body {
+            background-image: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine-65900.jpeg');
+        }
     }
 
 </style>
