Changed large home image name

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -36,7 +36,7 @@
 
     @media (min-width: 1200px) {
         body {
-            background-image: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine-65900.jpeg');
+            background-image: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine.jpg');
         }
     }
 
