Improved text size and placed homepage form in jumbotron

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,9 +51,9 @@
 <div class="container">
     <div class="row">
         <div class="col text-center">
-            <p class="text-secondary">
+            <span class="badge badge-pill badge-light">
             &copy; <?= date('Y') ?> by THE VILLA AT THE BAY.
-            </p>
+            </span>
         </div>
     </div>
 </div>
