--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -3,14 +3,14 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1 class="display-1">About the Villa at The Bay</h1>
+                <h1 class="display-3">About the Villa at The Bay</h1>
 
                 <p class="lead">Situated in Deception Bay in the Queensland region, The Villa at The Bay is a villa featuring a patio
                     and garden views.</p>
                 <p>The accommodation is 33 km from Brisbane, and guests benefit from complimentary
                     WiFi and private parking available on site.</p>
                 <p>The villa is equipped with 1 separate bedroom and includes a kitchen with an oven and a dining area. The villa also offers a flat-screen TV, a seating area, and a bathroom with a shower.</p>
-                <p>Margate is 13 km from The Villa at the Bay, while Caloundra is 43 km from the property. Brisbane Airport is 26 km away.</p>
+                <p>Margate is 13 km from The Villa at The Bay, while Caloundra is 43 km from the property. Brisbane Airport is 26 km away.</p>
 
                 <img src="https://d3orc742w48r4f.cloudfront.net/images/villa--inside--kitchen.png" class="rounded img-thumbnail mx-auto d-block"/>
             </div>
