--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -5,15 +5,164 @@
             <div class="col-12">
                 <h1 class="display-3">About the Villa at The Bay</h1>
 
-                <p class="lead">Situated in Deception Bay in the Queensland region, The Villa at The Bay is a villa featuring a patio
+                <p class="lead">Situated in Deception Bay in the Queensland region, The Villa at The Bay is a villa
+                    featuring a patio
                     and garden views.</p>
                 <p>The accommodation is 33 km from Brisbane, and guests benefit from complimentary
                     WiFi and private parking available on site.</p>
-                <p>The villa is equipped with 1 separate bedroom and includes a kitchen with an oven and a dining area. The villa also offers a flat-screen TV, a seating area, and a bathroom with a shower.</p>
-                <p>Margate is 13 km from The Villa at The Bay, while Caloundra is 43 km from the property. Brisbane Airport is 26 km away.</p>
-
-                <img src="https://d3orc742w48r4f.cloudfront.net/images/villa--inside--kitchen.png" class="rounded img-thumbnail mx-auto d-block"/>
+                <p>The villa is equipped with 1 separate bedroom and includes a kitchen with an oven and a dining area.
+                    The villa also offers a flat-screen TV, a seating area, and a bathroom with a shower.</p>
+                <p>Margate is 13 km from The Villa at The Bay, while Caloundra is 43 km from the property. Brisbane
+                    Airport is 26 km away.</p>
             </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div id="carouselVillaIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carouselVillaIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="2"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="3"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="4"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="5"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="6"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="7"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="8"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="9"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="10"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="11"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="12"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="13"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="14"></li>
+                        <li data-target="#carouselVillaIndicators" data-slide-to="15"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-5.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-1.jpg" alt="Second slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-2.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-3.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-4.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bathroom.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--dining-area-1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--dining-area-2.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--entrance-door.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--external-1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--kitchen-1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--kitchen-2.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--kitchen-3.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--living-room-1.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--living-room-2.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--living-room-3.jpg" alt="First slide">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h3>...</h3>
+                                <p>...</p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselVillaIndicators" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselVillaIndicators" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+
         </div>
 
 
@@ -37,4 +186,12 @@
 
     </div>
 
+{% endblock %}
+
+{%  block javascripts %}
+<script type="text/javascript">
+    <!--
+
+        //-->
+</script>
 {% endblock %}
