Added responsive images for carousel

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -40,112 +40,192 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-5.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-5-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-5-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-5-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-5-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-1.jpg" alt="Second slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-1-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-1-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-1-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-1-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-2.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-2-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-2-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-2-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-2-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-3.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-3-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-3-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-3-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-3-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bedroom-4.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-4-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-4-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-4-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bedroom-4-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--bathroom.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bathroom-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bathroom-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bathroom-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--bathroom-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--dining-area-1.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-1-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-1-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-1-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-1-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--dining-area-2.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-2-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-2-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-2-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--dining-area-2-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--entrance-door.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--entrance-door-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--entrance-door-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--entrance-door-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--entrance-door-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--external-1.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--external-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--external-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--external-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--external-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--kitchen-1.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-1-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-1-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-1-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-1-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--kitchen-2.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-2-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-2-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-2-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-2-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--kitchen-3.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-3-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-3-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen3-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--kitchen-3-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--living-room-1.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-1-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-1-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-1-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-1-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--living-room-2.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-2-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-2-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-2-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-2-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/villa--living-room-3.jpg" alt="First slide">
+                            <picture>
+                                <source media="(min-width: 1200px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-3-xl.jpg">
+                                <source media="(min-width: 992px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-3-lg.jpg">
+                                <source media="(min-width: 768px)" srcset="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-3-md.jpg">
+                                <img class="d-block w-100" src="https://d3orc742w48r4f.cloudfront.net/images/carousel/villa--living-room-3-sm.jpg" alt="First slide">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h3>...</h3>
                                 <p>...</p>
