--- a/templates/pages/contact.html.twig
+++ b/templates/pages/contact.html.twig
@@ -21,5 +21,11 @@
         label.required:after {
             content: '*';
         }
+        @media (max-width: 576px) {
+            .display-1, .display-2, .display-3, .display-4, .display-5 {
+                font-size: x-large;
+                font-weight: bold;
+            }
+        }
     </style>
 {% endblock %}
