--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -27,6 +27,13 @@
         -o-background-size: cover;
     }
 
+    @media (max-width: 576px) {
+        .display-1, .display-2, .display-3, .display-4, .display-5 {
+            font-size: x-large;
+            font-weight: bold;
+        }
+    }
+
     @media (min-width: 768px) {
         body {
             background-image: url('https://d3orc742w48r4f.cloudfront.net/images/accessories-beach-blue-feminine-md.jpg');
