--- a/templates/pages/rooms.html.twig
+++ b/templates/pages/rooms.html.twig
@@ -16,6 +16,12 @@
 {% endblock %}
 
 {% block stylesheets %}
-<style type="text/css">
-</style>
+    <style type="text/css">
+        @media (max-width: 576px) {
+            .display-1, .display-2, .display-3, .display-4, .display-5 {
+                font-size: x-large;
+                font-weight: bold;
+            }
+        }
+    </style>
 {% endblock %}
