Added pano images

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,7 +47,7 @@
     <div class="container-fluid">
 
     <div class="row">
-        <div class="col" style="background-color: #5a5a5a; height: 335px;">
+        <div class="col img-fluid" id="pano" style="background-repeat: no-repeat; height: 320px; background-size: cover; background-position:center;">
 
         </div>
     </div>
