--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -10,7 +10,13 @@
     </div>
     <div class="jumbotron">
         {{ form_start(form) }}
-        {{ form_widget(form) }}
+
+        {{ form_row(form.date_start) }}
+        {{ form_row(form.date_end) }}
+        {{ form_row(form.adult_count) }}
+        {{ form_row(form.child_count) }}
+        {{ form_row(form.search) }}
+
         {{ form_end(form) }}
 
     </div>
