--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
                 <a href="{{ path('home') }}" class="nav-link">Home</a>
             </li>
             <li class="nav-item{% if selectedNav == 'rooms' %} active{% endif %}">
-                <a href="{{ path('rooms') }}" class="nav-link">Rooms</a>
+                <a href="{{ path('search') }}" class="nav-link">Search</a>
             </li>
             <li class="nav-item{% if selectedNav == 'about' %} active{% endif %}">
                 <a href="{{ path('about') }}" class="nav-link">About</a>
